--- a/public/index.html
+++ b/public/index.html
@@ -70,5 +70,8 @@
     $(".nav-link").on("click", function () {
       $(".navbar-collapse").collapse("hide");
     });
+    $(".navbar-brand").on("click", function () {
+      $(".navbar-collapse").collapse("hide");
+    });
   </script>
 </html>
